# mm3sim

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  install.sh  marble_machine.mxl  marble_machine.xml  vercel.json
.cargo/: config.toml
.github/workflows/: README.md  build-and-release.yml  deploy.yml  native-build-and-release.yml  web-build.yml
assets/: initializer.js  style.css
src/: CODE_ORGANIZATION.md  main.rs
src/components/: barrel.rs  carousel.rs  chute.rs  cycloid_chute.rs  hihat.rs  instrument.rs  kick.rs  mod.rs  pivot_arm.rs  programming_wheel.rs  ride.rs  snare.rs  vibraphone.rs
src/resources/: barrel_params.rs  carousel_params.rs  chute_params.rs  constants.rs  hihat_params.rs  kick_params.rs  layers.rs  marble_collisions.rs  marble_history.rs  marble_params.rs  marble_runs.rs  mod.rs  power_params.rs  programming_wheel_params.rs  ride_params.rs  snare_params.rs  stats_intake.rs  tuning.rs  vibraphone_params.rs
src/systems/: axes.rs  barrel.rs  camera.rs  carousel.rs  chute_editor.rs  chute_handles.rs  hihat.rs  hud.rs  instrument.rs  marble.rs  marble_graph.rs  mod.rs  power.rs  programming_wheel.rs  setup.rs  sound.rs
src/utils/: mod.rs
