[package]
name = "mm3sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["wav"] }
bevy_egui = { version = "0.28", default-features = false, features = ["default_fonts", "render"] }
egui_plot = "0.28"
bevy_rapier3d = "0.27"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.23.1", features = ["js", "v4"] }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioScheduledSourceNode",
    "GainNode",
] }

[profile.release]
opt-level = 3


