[package]
name = "mm3sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["wav"] }
bevy_egui = { version = "0.39.1", default-features = false, features = ["default_fonts", "render"] }
egui_plot = "0.34"
avian3d = "0.6.1"
wasm-bindgen = "0.2"
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1.23.1", features = ["js", "v4"] }
rand = "0.10.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioScheduledSourceNode",
    "GainNode",
] }

[profile.release]
opt-level = 3


